--- a/render.yaml
+++ b/render.yaml
@@ -3,15 +3,5 @@ services:
     name: video-downloader
     env: python
     plan: free
-
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install yt-dlp Flask gunicorn
-
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 60
-
-    envVars:
-      - key: PORT
-        value: 10000
-      - key: PYTHONUNBUFFERED
-        value: '1'
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
